small fix for text under map going off screen

--- a/src/pages/item/item.css
+++ b/src/pages/item/item.css
@@ -281,6 +281,7 @@
 .PickupLocationTextLight {
   font-size: 18px;
   color: #c7c7c7c7;
+  margin-bottom: 1em;
 }
 
 .MapContainer {
